fixed developers page alignement to center, admin panel project names aligned vertically

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -184,7 +184,14 @@ input {
     margin: auto;
 }
 
-.projects-section__link-to-project {
+.filling-empty-space-childs {
+    height: 0 !important;
+    min-height: 0 !important;
+    margin-top: 0 !important; 
+    margin-bottom: 0 !important;
+}
+
+.projects-section__link-to-project, .filling-empty-space-childs {
     width: 30vw;
     height: 30vw;
     max-width: 30vw;
@@ -207,7 +214,7 @@ input {
 /*PROJECTS-SECTION AND DEVELOPERS-SECTION GRID*/
 
 @media only screen and (min-width: 400px) and (max-width: 560px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 22vw;
         height: 22vw;
         max-width: 22vw;
@@ -230,7 +237,7 @@ input {
 }
 
 @media only screen and (min-width: 1000px) and (max-width: 1500px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 22vw;
         height: 22vw;
         max-width: 22vw;
@@ -244,7 +251,7 @@ input {
 }
 
 @media only screen and (min-width: 1500px) and (max-width: 2000px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 17vw;
         height: 17vw;
         max-width: 17vw;
@@ -258,7 +265,7 @@ input {
 }
 
 @media only screen and (min-width: 2000px) and (max-width: 2500px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 13vw;
         height: 13vw;
         max-width: 13vw;
@@ -272,7 +279,7 @@ input {
 }
 
 @media only screen and (min-width: 2500px) and (max-width: 3000px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 11vw;
         height: 11vw;
         max-width: 11vw;
@@ -286,7 +293,7 @@ input {
 }
 
 @media only screen and (min-width: 3000px) {
-    .projects-section__link-to-project {
+    .projects-section__link-to-project, .filling-empty-space-childs {
         width: 9vw;
         height: 9vw;
         max-width: 9vw;
@@ -553,7 +560,7 @@ header {
   font-size: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   padding-left: 1.25vw;
 }
 
@@ -2280,6 +2287,9 @@ footer {
 }
 
 .all-project__name {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
   font-family: 'Cuprum', sans-serif;
   font-size: 4vh;
   border-bottom: 1px solid #202d3a;
@@ -2287,6 +2297,15 @@ footer {
   padding-bottom: 5px;
   margin-bottom: 20px;
   text-transform: uppercase;
+}
+
+.all-project__name_content_wrapper {
+  display: table;
+  width: 100%;
+}
+
+.all-project__name_content {
+  height: fit-content;
 }
 
 .all-project__subheading {
